# secret-santa

./: .gitignore  LICENSE.md  README.md  secret-santa.cabal  secret_santa.hs  stack.yaml
examples/: forbidden-pairs.csv  mailing-addresses.csv  people.csv
src/: Main.hs
