name:                secret-santa
version:             0.1.0.0
synopsis:            Generates and assigns secret santa pairings
description:         Please see README.md
homepage:            http://github.com/devonhollowood/secret-santa#readme
license:             MIT
license-file:        LICENSE.md
author:              Devon Hollowood
maintainer:          devonhollowood@gmail.com
copyright:           2015 Devon Hollowood
category:            Tools
build-type:          Simple
cabal-version:       >=1.10

executable secret-santa
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       HaskellNet-SSL,
                       optparse-applicative,
                       MonadRandom,
                       cassava,
                       bytestring,
                       text,
                       vector,
                       containers,
                       random-shuffle,
                       directory
  ghc-options:         -Wall

source-repository head
  type: git
  location: https://github.com/devonhollowood/secret-santa
